[package]
name = "youtube_video_scrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "=1.27", features = ["full"] }
ytranscript = "0.1.0"
